# patX

./: .gitignore  CMakeLists.txt  CODEX_TASK.txt  Cargo.toml  README.md  REQUIREMENTS.md
include/: database.hpp  excel_io.hpp  index.hpp  migration.hpp  patent.hpp  pdf_parser.hpp  undo_manager.hpp
scripts/: build.ps1
src/cpp/: database.cpp  main.cpp  main_gui.cpp  test_import.cpp  undo_manager.cpp
src/cpp/core/: database.cpp  migration.cpp
src/cpp/index/: index.cpp
src/cpp/io/: excel_io.cpp  pdf_parser.cpp
src/rust/: ffi.rs  lib.rs  pool.rs  scheduler.rs  validator.rs
tests/: benchmark.cpp  test_main.cpp
