[package]
name = "patx-core"
version = "0.1.0"
edition = "2021"
authors = ["deepinwine"]

[lib]
name = "patx_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
crossbeam = "0.8"
rustc-hash = "2.0"
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true